--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
   },
   "dependencies": {
     "@jsonresume/schema": "^1.0.0",
-    "puppeteer": "^23.4.0",
+    "puppeteer": "15.5.0",
     "sade": "^1.7.0",
     "yoctocolors": "^2.0.0"
   },
